# EchoPrime

./: .gitignore  CLAUDE.md  EchoPrimeDemo.ipynb  README.md  RTX_5090_SETUP.md  pyproject.toml  test3.json
__MACOSX/: ._model_data
assets/: all_phr.json  all_phr_it.json
echo_prime/: model.py
scripts/: batch_classify.py  classify_views.py  investigate_timing.py  visualize_views.py
utils/: utils.py
