[project]
name = "echoprime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Core dependencies with exact versions from requirements.txt
    "ipywidgets==8.1.2",
    "mysql-connector-python==8.0.31",
    "opencv-python-headless==4.5.5.64",
    "polars==0.15.14",
    "pydicom==2.3.1",
    "pytorch-lightning==2.2.0.post0",
    "PyWavelets==1.4.1",
    "wandb==0.16.3",
    # Additional required dependencies with compatible exact versions
    "numpy==1.26.4",  # Upgraded for PyTorch 2.5+ compatibility
    # torch and torchvision installed manually from nightly for RTX 5090 support
    "pandas==2.0.3",
    "matplotlib==3.7.5",
    "tqdm==4.66.2",
    "scikit-learn==1.3.2",
    "transformers==4.38.2",
    "jupyter>=1.1.1",
]

# NOTE: torch and torchvision are installed manually for RTX 5090 (sm_120) support
# Install: uv pip install --prerelease=allow --index-url https://download.pytorch.org/whl/nightly/cu128 torch torchvision
# Run scripts with: uv run --no-sync <script>
# See RTX_5090_SETUP.md for details
